--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>The Joe Shrine</title>
+    <link href="https://fonts.googleapis.com/css?family=Kumar+One" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
@@ -32,10 +33,14 @@
       <!-- Make this particular h2 tag color: slategray -->
       <h2>Joe has accomplished...</h2>
       <!-- These need to be aligned like the mock-up. How can we change the markup to make this work? -->
-      <img src="images/sound-icon.png" alt="Sound Icon">
-      <a href="https://voice123.com/joesvo">Some Voice Work</a>
-      <img src="images/history-icon.png" alt="History Icon">
-      <a href="http://unsolvedmysteries.wikia.com/wiki/Joe_Shepherd">Some Questionable Other Things</a>
+      <div class="accomplishment">
+        <img src="images/sound-icon.png" alt="Sound Icon">
+        <a href="https://voice123.com/joesvo">Some Voice Work</a>
+      </div>
+      <div class="accomplishment">
+        <img src="images/history-icon.png" alt="History Icon">
+        <a href="http://unsolvedmysteries.wikia.com/wiki/Joe_Shepherd">Some Questionable Other Things</a>
+      </div>
     </div>
 
     <!-- These elements should all be in one row with space in between. They should have the same shape as the mockup. -->
