commit for second break

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
     <!-- These elements should all be in one row with space in between. They should have the same shape as the mockup. -->
     <div id="images">
-      <img src="images/joe.jpg" alt="Joe's face">
-      <img src="images/definitelyJoe.jpg" alt="Joe living dangerously">
-      <img src="images/alsoJoe.png" alt="Joe in a pile of mountain dew">
+      <div><img src="images/joe.jpg" alt="Joe's face"></div>
+      <div><img src="images/definitelyJoe.jpg" alt="Joe living dangerously"></div>
+      <div><img src="images/alsoJoe.png" alt="Joe in a pile of mountain dew"></div>
     </div>
 
     <!-- Remove list style for these awards -->
